objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_LinePONumber__c</fullName>
        <description>This field will be used to capture the PO Number at a line level - leveraged in the Contract Document forms for North America</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LineTotalPrice__c</fullName>
        <label>Line Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListCFR__c</fullName>
        <label>List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListPriceDiscountMarkup__c</fullName>
        <formula>IF( ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;), SBQQ__ListPrice__c  +  PMC_CPQ_Discount__c , SBQQ__ListPrice__c  +  (PMC_CPQ_Discount__c *  PMC_CPQ_ExchangeRate__c ))</formula>
        <label>List Price+Discount/Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListPrice__c</fullName>
        <label>List Price (Original)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field captures the Location of the product</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MarginAdjustment__c</fullName>
        <label>Margin Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MarginBeforeAmend__c</fullName>
        <label>Replacement Margin Before Amend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MarketAdjustment__c</fullName>
        <label>Market Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MaterialGroup__c</fullName>
        <formula>IF(AND(TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c ) = &apos;Raw Material&apos;, TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Co-Product&apos;), TEXT(10 + PMC_CPQ_ApprovalRequired__c ),

IF(AND(TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c) = &apos;Co-Products&apos;, TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Co-Product&apos;), TEXT(20 + PMC_CPQ_ApprovalRequired__c ),

IF(TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Potash&apos; , TEXT(30 + PMC_CPQ_ApprovalRequired__c ),

IF(TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Phosphate&apos; , TEXT(40 + PMC_CPQ_ApprovalRequired__c ), &apos;00&apos; ) )))</formula>
        <label>Material Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MinimumPriceAdjustment__c</fullName>
        <label>Minimum Price Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MoT_Service_Type__c</fullName>
        <formula>TEXT( PMC_CPQ_ModeofTransportation__c)+ TEXT(PMC_CPQ_Incoterms1__c )</formula>
        <label>MoT &amp; Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
        <description>This field is created  to check The mode of transportation</description>
        <inlineHelpText>Select the appropriate mode from the available options to track and manage logistics effectively</inlineHelpText>
        <label>MoT</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MosaicOptiontoShip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mosaic Options to ship</description>
        <label>Mosaic Option to Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MotPrePay__c</fullName>
        <formula>TEXT(PMC_CPQ_ModeofTransportation__c)</formula>
        <label>MOT Prepay Permutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NALineTotalPriceFormula__c</fullName>
        <formula>(SBQQ__ListPrice__c + PMC_CPQ_Discount__c + PMC_CPQ_VolumeDiscount__c + PMC_CPQ_EstFreightPrice__c)* SBQQ__EffectiveQuantity__c</formula>
        <label>NA Line Total Price Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetTotalPrice__c</fullName>
        <description>Created as part of GDASF-6987, where this field get the value from the Get Price response callout.</description>
        <label>Net Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetUnitPriceCustomFormula__c</fullName>
        <formula>SBQQ__ListPrice__c +  PMC_CPQ_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price (Custom Formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetUnitPrice__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Netback__c</fullName>
        <description>This field is created  to check Price without Logistic Charges</description>
        <label>Netback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Nitrogen__c</fullName>
        <label>Nitrogen %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NumberofRailCars__c</fullName>
        <description>As per Cheat Sheet for Customer Service.</description>
        <label>Number of Rail Cars</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OpportunityLineItemId__c</fullName>
        <description>This field is created  to check The opportunity line item value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OpportunityLineItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginalQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To capture the Original Quantity of quote line during initial configuration</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginalQuoteReplacementMargin__c</fullName>
        <label>Original Quote Replacement Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackType__c</fullName>
        <description>This field captures the Pack type of the product associated.</description>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackageType__c</fullName>
        <description>This field captures the package type for the product associated.</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackagingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentDate__c</fullName>
        <description>This field is created  to check Payment date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTermsApprovalRequired__c</fullName>
        <description>This field compares the payment term on quote with account. If the payment terms of the quote is higher, it indicates that approval is required.</description>
        <formula>IF( RIGHT(LEFT(TEXT(PMC_CPQ_PaymentTerms__c),6),1)=&quot; &quot;,IF(VALUE(RIGHT(LEFT(TEXT(PMC_CPQ_PaymentTerms__c),5),1))&gt;VALUE(RIGHT(LEFT(TEXT(PMC_CPQ_Account__r.PMC_CPQ_PaymentTerms__c),5),1)),1,0),IF((VALUE(MID(TRIM(LEFT( TEXT(PMC_CPQ_PaymentTerms__c),7)), 5, 7)))&gt;(VALUE(MID(TRIM(LEFT(TEXT(PMC_CPQ_Account__r.PMC_CPQ_PaymentTerms__c),7)), 5, 7))),1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Approval Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote line.</description>
        <inlineHelpText>Specify the agreed-upon conditions and timeframe for payment in this transaction.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Against Documents</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 5 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 7 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 10 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 15 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 30 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 45 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Doc - 60 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 90 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 120 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 180 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>Net 1 Day - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 2 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 3 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>05 Days - Document Lock Date</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 14 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 15 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 17 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 21 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 28 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 29 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 31 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 35 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 42 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days - From Invoicing Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PercentageOfQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is to capture percentage of original Quantity at quote line editor</description>
        <label>% Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PermittedQuantity__c</fullName>
        <formula>IF( (ROUND((PMC_CPQ_OriginalQuantity__c *  PMC_CPQ_PercentageOfQuantity__c),0) &gt; SBQQ__Quantity__c )&amp;&amp;  SBQQ__Quote__r.PMC_CPQ_QuoteApproved__c ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permitted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Phosphorous__c</fullName>
        <label>Phosphorous %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PlaceholderMargin__c</fullName>
        <label>Placeholder Margin</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PortDetail__c</fullName>
        <description>This field is created  to check Port details</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Port Detail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PortExpense__c</fullName>
        <label>Port Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PortSelection__c</fullName>
        <description>This field is created  to check port selection</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Port Selection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Potassium__c</fullName>
        <label>Potassium %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Prepay__c</fullName>
        <description>Created as part of GDASF-18410. This field will check for Payment Terms to check the checkbox.</description>
        <formula>If(ISPICKVAL(PMC_CPQ_PaymentTerms__c , &apos;Prepayment&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prepay Indicator (depends on Payment Terms)</inlineHelpText>
        <label>Prepay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PreviousListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PreviousSalesPrice__c</fullName>
        <label>Previous Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceAdjustmentBR__c</fullName>
        <formula>(PMC_CPQ_CustomerPrice__c - SBQQ__ListPrice__c - PMC_CPQ_EstFreightPrice__c - PMC_CPQ_CostAdjustment__c - PMC_CPQ_MarginAdjustment__c - PMC_CPQ_VCOAdjustment__c * IF(ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;),1, PMC_CPQ_ExchangeRate__c )
-(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )
-(( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) - ( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) /(1 +PMC_CPQ_InterestFees__c/30 *PMC_CPQ_InterestPeriod__c))
- PMC_CPQ_Commission__c *
(
PMC_CPQ_CustomerPrice__c -
(
( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c
)-
(( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) - ( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) /(1 +PMC_CPQ_InterestFees__c/30 *PMC_CPQ_InterestPeriod__c))-
PMC_CPQ_EstFreightPrice__c
))/ IF(ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;),1, PMC_CPQ_ExchangeRate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Adjustment BR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceAdjustmentNA__c</fullName>
        <formula>PMC_CPQ_CustomerPrice__c - SBQQ__ListPrice__c - PMC_CPQ_EstFreightPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Adjustment NA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceBookValue__c</fullName>
        <description>Selection of Pricebook</description>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PriceBookValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceByDateDisplay__c</fullName>
        <description>This field is created  to  display price by date.</description>
        <formula>&quot; &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price By Date Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceByDate__c</fullName>
        <description>This field is created  to check price by date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Price By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceDueDate__c</fullName>
        <description>This field is created  to check The price due date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceCeiling__c</fullName>
        <description>This field is created  to check Price guidance ceiling value.</description>
        <label>Ceiling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceFloor__c</fullName>
        <description>This field is created  to check Price guidance floor value</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceLast__c</fullName>
        <label>Price Guidance Last</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceNet__c</fullName>
        <label>Price Guidance Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceTarget__c</fullName>
        <description>This field is created  to check Price guidance target value</description>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created   to indicate whether customer has budget or price. Only applicable for BR.</description>
        <label>Price Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceOverride__c</fullName>
        <description>This field is created  to check price markup/ markdown value.</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PricingFormula__c</fullName>
        <description>This field is created to get price formula from Pricefx specific to International Sales conditions</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Price Calculation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductAvailability__c</fullName>
        <formula>HYPERLINK(&quot;/apex/PMC_CPQ_QuoteLinesList?recid=&quot;+  Id  ,  IMAGE(&quot;/img/samples/rating1.gif&quot;, &quot;Click&quot;) , &apos;_self&apos;)</formula>
        <label>Product Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocationLocationBackend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductLocation-Location(Backend)</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>CPQ Quote Lines (ProductLocation-Location(Backend))</relationshipLabel>
        <relationshipName>CPQ_Quote_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field captures the Location of the product.</description>
        <label>Product Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>PMC_CPQ_ProductLocation__c.PMC_CPQ_ProductName__c</valueField>
            </filterItems>
            <filterItems>
                <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Origin Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocatorInd__c</fullName>
        <formula>IF(!ISBLANK(SBQQ__Product__r.PMC_CPQ_Location__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Location Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductPackTypeIndicator__c</fullName>
        <formula>IF(!ISPICKVAL(  SBQQ__Product__r.PMC_CPQ_PackType__c  , &apos;&apos;) , true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product PackType Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductPackageTypeIndicator__c</fullName>
        <description>This field is to indicate if the Package Type on Product is loaded or not.</description>
        <formula>IF(!ISPICKVAL( SBQQ__Product__r.PMC_CPQ_PackageType__c , &apos;&apos;) ,  true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product PackageType Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSegment__c</fullName>
        <formula>TEXT( SBQQ__Product__r.PMC_CPQ_ProductSegment__c)</formula>
        <label>Product Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductType__c</fullName>
        <formula>Text( SBQQ__Product__r.PMC_CPQ_ProductTypes__c)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductTypes__c</fullName>
        <label>Product Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PublicationPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteApprovedExtractor__c</fullName>
        <formula>SBQQ__Quote__r.PMC_CPQ_QuoteApproved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Approved Extractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteClassificationExt__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteClassification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Classification Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteClassification__c</fullName>
        <label>Quote Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteCustomerSegmentExtractor__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Account__r.PMC_SS_CustomerType__c)</formula>
        <label>Quote Customer Segment Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLineIdentifier__c</fullName>
        <description>This field will store the quote line number with prefix removed which will serve as an external id for integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Quote Line Identifier</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLineSelfId__c</fullName>
        <description>This field is created to populate this Quote Line id on the amended Quote line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Line Self Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLineSelfLookupBackend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Self Lookup</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>CPQ Quote Lines (Quote Line Self Lookup)</relationshipLabel>
        <relationshipName>CPQ_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordSubTypeExtractor__c</fullName>
        <formula>TEXT( SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c )</formula>
        <label>Quote Record Sub-Type Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
        <description>This field will indicate the business type of the associated Quote and will be used as Controlling field for other dependent fields.</description>
        <inlineHelpText>adding helptext for poc</inlineHelpText>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Fertilizer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Raw Material</fullName>
                </value>
                <value>
                    <fullName>Co-Products</fullName>
                </value>
                <value>
                    <fullName>B2C - Fertilizer</fullName>
                </value>
                <value>
                    <fullName>B2B - Feed</fullName>
                </value>
                <value>
                    <fullName>B2B - Fertilizer</fullName>
                </value>
                <value>
                    <fullName>B2B - Specialties</fullName>
                </value>
                <value>
                    <fullName>B2C - Paraguay</fullName>
                </value>
                <value>
                    <fullName>B2B - Potash</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordTypeNameExt__c</fullName>
        <formula>CASE(SBQQ__Quote__r.RecordType.Name, &quot;Domestic NA&quot;, &quot;Domestic NA&quot;, &quot;Domestic SA&quot;, &quot;Domestic SA&quot;,&quot;International&quot;,&quot;International&quot;,&quot;International Distribution&quot;,&quot;International Distribution&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Record Type Name Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordType__c</fullName>
        <description>This picklist will hold the record type of Quote and will be used as a controlling field for many other picklist fields.</description>
        <label>Quote Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic NA</fullName>
                </value>
                <value>
                    <fullName>Domestic SA</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRegionExtractor__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.PMC_CPQ_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Region Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRegion__c</fullName>
        <description>This field to fetch quote region to quote line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteSalesAgreementExtractor__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.PMC_SS_SalesAgreement__c</formula>
        <label>Quote Sales Agreement Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteStatusExtractor__c</fullName>
        <description>To extract quote status to quote line</description>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Status Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteValidityDate__c</fullName>
        <description>This field is created  to check the validity date of a quote</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial1ListCFR__c</fullName>
        <label>Raw Material 1 List CFR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial1SoldCFR__c</fullName>
        <label>Raw Material 1 Sold CFR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial2ListCFR__c</fullName>
        <label>Raw Material 2 List CFR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial2SoldCFR__c</fullName>
        <label>Raw Material 2 Sold CFR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>